// MiniBlog API 定义，包含健康检查、用户管理和文章管理的 RPC 接口
syntax = "proto3"; // 告诉编译器此文件使用什么版本的语法

package apiserver.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/yanking/miniblog/api/gen/apiserver/v1;v1";

// User 表示用户信息
message User {
  // userID 表示用户 ID
  string user_id = 1;
  // username 表示用户名称
  string username = 2;
  // nickname 表示用户昵称
  string nickname = 3;
  // email 表示用户电子邮箱
  string email = 4;
  // phone 表示用户手机号
  string phone = 5;
  // postCount 表示用户拥有的博客数量
  int64 post_count = 6;
  // createdAt 表示用户注册时间
  google.protobuf.Timestamp created_at = 7;
  // updatedAt 表示用户最后更新时间
  google.protobuf.Timestamp updated_at = 8;
}

// LoginRequest 表示登录请求
message LoginRequest {
  // username 表示用户名称
  string username = 1;
  // password 表示用户密码
  string password = 2;
}

// LoginResponse 表示登录响应
message LoginResponse {
  // token 表示返回的身份验证令牌
  string token = 1;
  // expireAt 表示该 token 的过期时间
  google.protobuf.Timestamp expire_at = 2;
}

// RefreshTokenRequest 表示刷新令牌的请求
message RefreshTokenRequest {
  // 该请求无需额外字段，仅通过现有的认证信息（如旧的 token）进行刷新
}

// RefreshTokenResponse 表示刷新令牌的响应
message RefreshTokenResponse {
  // token 表示返回的身份验证令牌
  string token = 1;
  // expireAt 表示该 token 的过期时间
  google.protobuf.Timestamp expire_at = 2;
}

// ChangePasswordRequest 表示修改密码请求
message ChangePasswordRequest {
  // userID 表示用户 ID
  string user_id = 1;
  // oldPassword 表示当前密码
  string old_password = 2;
  // newPassword 表示准备修改的新密码
  string new_password = 3;
}

// ChangePasswordResponse 表示修改密码响应
message ChangePasswordResponse {}

// CreateUserRequest 表示创建用户请求
message CreateUserRequest {
  // username 表示用户名称
  string username = 1;
  // password 表示用户密码
  string password = 2;
  // nickname 表示用户昵称
  optional string nickname = 3;
  // email 表示用户电子邮箱
  string email = 4;
  // phone 表示用户手机号
  string phone = 5;
}

// CreateUserResponse 表示创建用户响应
message CreateUserResponse {
  // userID 表示新创建的用户 ID
  string user_id = 1;
}

// UpdateUserRequest 表示更新用户请求
message UpdateUserRequest {
  // userID 表示用户 ID
  string user_id = 1;
  // username 表示可选的用户名称
  optional string username = 2;
  // nickname 表示可选的用户昵称
  optional string nickname = 3;
  // email 表示可选的用户电子邮箱
  optional string email = 4;
  // phone 表示可选的用户手机号
  optional string phone = 5;
}

// UpdateUserResponse 表示更新用户响应
message UpdateUserResponse {}

// DeleteUserRequest 表示删除用户请求
message DeleteUserRequest {
  string user_id = 1;
}

// DeleteUserResponse 表示删除用户响应
message DeleteUserResponse {}

// GetUserRequest 表示获取用户请求
message GetUserRequest {
  // userID 表示用户 ID
  string user_id = 1;
}

// GetUserResponse 表示获取用户响应
message GetUserResponse {
  // user 表示返回的用户信息
  User user = 1;
}

// ListUserRequest 表示用户列表请求
message ListUserRequest {
  // offset 表示偏移量
  int64 offset = 1;
  // limit 表示每页数量
  int64 limit = 2;
}

// ListUserResponse 表示用户列表响应
message ListUserResponse {
  // totalCount 表示总用户数
  int64 total_count = 1;
  // users 表示用户列表
  repeated User users = 2;
}
